# feodis

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
feodis_tracker/: __init__.py  models.py  routes.py
feodis_tracker/static/: app.js  index.html
pages/: index.js
tests/: test_basic.py
